--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-!/*.py
-!/README.md
-!/req.txt
-/main_class.build/*
-/main_class.dist/*
-/__pycache__/*
-/.venv/*
-/img/*
+!./*.py
+!./README.md
+!./req.txt
+!./Language/*
+/*
